# unifi-dns-swap

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
