[project]
name = "unifi-dns-swap"
version = "0.1.0"
description = "Set UniFi LAN DHCP DNS providers"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]

[tool.bandit]
exclude_dirs = [".venv"]
